trying to fix bground image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,7 +34,7 @@ li {
 }
 
 body {
-	background-image: url('corks75.png');
+	background-image: url(image-path('corks75.png'));
 	background-size: cover;
 	background-repeat: no-repeat;
 }
