--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,4 +1,7 @@
-Sign in
+<div id="newrest">
+<div id="newrestbox">
+
+<!-- <h1>Sign in</h1>
 <br />
 <%= form_for @user, {url:"/authentications", method:"post"} do |u| %>
 	<%= u.label :email, "Email" %><%=u.text_field :email %><br />
@@ -10,10 +13,10 @@ Sign in
 <hr />
 User id: <%= session[:user_id] %>
 
-<!-- <div id="newuser">
+<div id="newuser"> -->
 <h1>Login Here</h1>
 
-<%= form_for @user, {url:"/authentications", method:"post"} do |i|%>
+<%= form_for @user, html: {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
 
 <p>
   <%= i.label :email, "Email"%>
@@ -30,4 +33,5 @@ User id: <%= session[:user_id] %>
 </p>
 
 <%end%>
-</div> -->
+</div>
+</div>
