--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,19 +1,30 @@
 <div id="newrest">
-<div id="newrestbox">
+	<div id="newrestbox">
 
-<!-- <h1>Sign in</h1>
-<br />
-<%= form_for @user, {url:"/authentications", method:"post"} do |u| %>
-	<%= u.label :email, "Email" %><%=u.text_field :email %><br />
+		<h1>Sign in</h1><br />
+
+			<%= form_for @user, {url:"/authentications", method:"post"} do |u| %>
 	
-	<%= u.label :password, "Password" %><%=u.text_field :password %><br />
-	<%= u.submit "Log In" %>
-<% end %>
+				<p>
+					<%= u.label :email, "Email" %><br />
+					<%=u.text_field :email %>
+				</p>
+				<p>
+					<%= u.label :password, "Password" %><br />
+					<%=u.text_field :password %></p>
+				<p>
+					<%= u.submit "Log In" %>
+				</p>
+			
+			<% end %>
 
-<hr />
-User id: <%= session[:user_id] %>
+			<hr />
+			User id: <%= session[:user_id] %>
 
-<div id="newuser"> -->
+	</div>
+</div>
+
+<!-- <div id="newuser">
 <h1>Login Here</h1>
 
 <%= form_for @user, html: {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
@@ -34,4 +45,4 @@ User id: <%= session[:user_id] %>
 
 <%end%>
 </div>
-</div>
+</div> -->
