added google maps

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,13 @@
  *= require_self
  *= require_tree .
  */
+
+
+ #map-canvas { 
+ 	height: 300px;
+ 	width: 300px;
+ 	margin: 0 auto;
+ 	position: absolute;
+ 	top: 150px;
+
+ }
