--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,14 @@
 */
 $maincolor: black;
 
+ #map-canvas { 
+ 	height: 300px;
+ 	width: 300px;
+ 	margin: 0 auto;
+ 	position: absolute;
+ 	top: 150px;
+ }
+
 .jumbotron {
 	width: 300;
 	opacity: .8;
