--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,7 +1,7 @@
 <div id="newrest">
 	<div id="newrestbox">
 
-		<h1>Sign in</h1><br />
+		<h1>Sign in</h1>
 
 			<%= form_for @user, {url:"/authentications", method:"post"} do |u| %>
 	
