--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
  			 <li><a href="/rests">List</a></li>
  			 <li><a href="/rests/new">New Rest</a></li>
  			 <li><a href="/users/new">New Users</a></li>
+       <li><a href="/authentications/new">Sign In</a></li>
+       <li><a href="/groups/">Groups</a></li>
 
  			
 		</ul>
