--- a/app/views/rests/show.html.erb
+++ b/app/views/rests/show.html.erb
@@ -1,6 +1,53 @@
-<%= @rest.name %>
-<%= @rest.city %>
-<%= @rest.zip %>
-<%= @rest.web %>
-<%= @rest.fee %>
-<%= @rest.notes %>
+  
+<div id="newrest">
+	<div id="newrestbox">
+
+		<strong><%= @rest.name %></strong></br>
+		<%= @rest.city %></br>
+		<%= @rest.zip %></br>
+		<%= @rest.web %></br>
+		<%= @rest.fee %></br>
+		<%= @rest.notes %></br>
+
+	<script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD32oFCWtStoFQ9JzajCXErEoGQNMWlIts&sensor=true">
+    </script>
+    <script type="text/javascript">
+      function initialize() {
+
+        var myLatLng = new google.maps.LatLng(<%= @rest.lat %>, <%= @rest.lon %>);
+
+        var mapOptions = {
+          center: myLatLng,
+          zoom: 12,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      
+        var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        draggable: true,
+        animation: google.maps.Animation.DROP
+      });
+
+        var secondMarker = new google.maps.Marker({
+        position: new google.maps.LatLng(40.699918,-74.456334),
+        map: map,
+        draggable: true,
+        animation: google.maps.Animation.DROP
+      });
+
+        google.maps.event.addListener(map,'click',function(evt){console.log(evt.latLng);});
+
+      }
+        google.maps.event.addDomListener(window, 'load', initialize
+        );
+
+    </script>
+
+  		<div id="map-canvas"/>
+	</div>
+</div>
