--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,46 @@
 </head>
 <body>
 
-	<nav>
-		<ul class="nav nav-tabs">
-    		 <li><a href="/">Home</a></li>
+
+
+
+
+<!-- 
+<div class="masthead">
+        
+        <div class="navbar">
+          <div class="navbar-inner">
+            <div class="container">
+              <ul class="nav nav-tabs">
+               <li class="active"><a href="#">Key Free</a></li>
+               <li><a href="/">Home</a></li>
+               <li><a href="/rests">List</a></li>
+               <li><a href="/rests/new">New Rest</a></li>
+               <li><a href="/users/new">New Users</a></li>
+               <li><a href="/authentications/new">Sign In</a></li>
+               <li><a href="/groups/">Groups</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+
+  <nav>
+		<ul class="nav navbar-inverse nav-tabs navbar">
+    	 <li><a href="/">Key Free</a></li>
+       <li><a href="/">Home</a></li>
  			 <li><a href="/rests">List</a></li>
  			 <li><a href="/rests/new">New Rest</a></li>
  			 <li><a href="/users/new">New Users</a></li>
        <li><a href="/authentications/new">Sign In</a></li>
        <li><a href="/groups/">Groups</a></li>
+       <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Sign in</button>
+              <button type="submit" class="btn">New User</button>
+            </form>
 
  			
 		</ul>
