--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,9 +1,9 @@
 <div id="newrest">
 	<div id="newrestbox">
 
-		<h1>Sign in</h1>
+<!-- 		<h1>Sign in</h1>
 
-			<%= form_for @user, {url:"/authentications", method:"post"} do |u| %>
+			<%= form_for @user, {url:"/authentications/", method:"post"} do |u| %>
 	
 				<p>
 					<%= u.label :email, "Email" %><br />
@@ -22,12 +22,12 @@
 			User id: <%= session[:user_id] %>
 
 	</div>
-</div>
+</div> -->
 
-<!-- <div id="newuser">
+<!-- <div id="newuser"> -->
 <h1>Login Here</h1>
 
-<%= form_for @user, html: {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
+<%= form_for @user, {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
 
 <p>
   <%= i.label :email, "Email"%>
@@ -39,10 +39,11 @@
   <%= i.password_field :password%>
 </p>
 
-<p>
+<p><center>
   <%= i.submit "LOG IN" %>
-</p>
+</center></p>
 
 <%end%>
+User id: <%= session[:user_id] %>
 </div>
-</div> -->
+</div>
