--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,12 +40,29 @@ $maincolor: black;
 	
 }
 
+#restlist {
+	margin: 0 auto;
+	width: 600px;	
+	position: relative;
+	
+}
+
+#restlistbox {
+	margin: 0 auto;
+	width: 600px;
+	background-color: rgba(205, 45, 45, 0.7);
+	color: black;
+	border-radius: 20px;
+	position: absolute;
+}
+
 #newrestbox {
 	margin: 0 auto;
 	width: 350px;
 	background-color: rgba(205, 45, 45, 0.7);
 	color: black;
 	border-radius: 20px;
+	padding: 20px;
 	position: absolute;
 }
 
@@ -54,7 +71,7 @@ li {
 }
 
 body {
-	background-image: url(image-path('corks3.png'));
+	background-image: url(image-path('corks2.jpg'));
 	background-size: cover;
 	background-repeat: no-repeat;
 }
