--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,49 +1,22 @@
 <div id="newrest">
 	<div id="newrestbox">
 
-<!-- 		<h1>Sign in</h1>
+		<h1>Login Here</h1>
 
-			<%= form_for @user, {url:"/authentications/", method:"post"} do |u| %>
-	
+			<%= form_for @user, {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
+
 				<p>
-					<%= u.label :email, "Email" %><br />
-					<%=u.text_field :email %>
+				  <%= i.label :email%><br/>
+				  <%= i.text_field :email%>
 				</p>
 				<p>
-					<%= u.label :password, "Password" %><br />
-					<%=u.text_field :password %></p>
-				<p>
-					<%= u.submit "Log In" %>
+				  <%= i.label :password%><br/>
+				  <%= i.password_field :password%>
 				</p>
-			
-			<% end %>
-
-			<hr />
-			User id: <%= session[:user_id] %>
-
+				<p>
+				  <%= i.submit "LOG IN" %>
+				</p>
+				<%end%>
+				User id: <%= session[:user_id] %>
 	</div>
-</div> -->
-
-<!-- <div id="newuser"> -->
-<h1>Login Here</h1>
-
-<%= form_for @user, {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
-
-<p>
-  <%= i.label :email, "Email"%>
-  <%= i.text_field :email%>
-</p>
-
-<p>
-  <%= i.label :password, "Password"%>
-  <%= i.password_field :password%>
-</p>
-
-<p><center>
-  <%= i.submit "LOG IN" %>
-</center></p>
-
-<%end%>
-User id: <%= session[:user_id] %>
-</div>
 </div>
