--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,6 @@
+<div id="newrest">
+	<div id="newrestbox">
+
 <script>
 // Go ahead and load the above when the window is ready
 	google.maps.event.addDomListener(window, 'load', initialize);
@@ -16,3 +19,5 @@
  <br />
 <% end %>
 
+	</div>
+</div>
