--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,10 @@
 
 
   <nav>
-		<ul class="nav navbar-inverse nav-tabs navbar">
-    	 <li><a href="/">Key Free</a></li>
+		<!-- <ul class="nav navbar-inverse nav-tabs navbar"> -->
+
+      <%= render 'layouts/nav' %>
+  <!--   	 <li><a href="/">Key Free</a></li>
        <li><a href="/">Home</a></li>
  			 <li><a href="/rests">List</a></li>
  			 <li><a href="/rests/new">New Rest</a></li>
@@ -45,17 +47,19 @@
        <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
               <input class="span2" type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-              <button type="submit" class="btn">New User</button>
+              <a input class="btn btn-default" type="submit" href="/rests">Sign in</a></button>
+              <a input class="btn btn-default" type="submit" href="/rests">New User</a></button>
             </form>
 
  			
-		</ul>
+		</ul> -->
 	</nav>
 
-<%= yield %>
+      <%= yield %>
 
-<!-- <footer>Here's a footer</footer>
- -->
+      <footer>
+        <%= render 'layouts/footer' %>
+      </footer>
+
 </body>
 </html>
