--- a/app/views/rests/index.html.erb
+++ b/app/views/rests/index.html.erb
@@ -1,34 +1,30 @@
-<div id="newrest">
-	<div id="newrestbox">
+<div id="restlist">
+	<div id="restlistbox">
 		<h1>List of Restaurants</h1>
 
-
-<!-- <address>
-  <strong>Twitter, Inc.</strong><br>
-  795 Folsom Ave, Suite 600<br>
-  San Francisco, CA 94107<br>
-  <abbr title="Phone">P:</abbr> (123) 456-7890
-</address> -->
-
-	
+		<table class="table table-hover">
+			<tr>
+				<th>NAME</th>
+				<th>CITY</th>
+				<th>ZIP</th>
+				<th>FEE</th>
+				<th>LINK</th>
+				<th>NOTES</th>
+			</tr>
+				
 			<% @rests.each do |rest| %>
-	
-	
-				<strong><%= link_to rest.name, rest %></strong><br/>
-				<%= rest.city %><br/>
-				<%= rest.zip %><br/>
-				Fee: $<%= rest.fee %><br/>
-				<a href="<%= rest.web %>" class="btn btn-default btn-sm"><%= rest.name %></a><br/>
-				<%= rest.notes %><br/>
-		
 
-<!-- 			<%= button_to "X", { action: "destroy", id: rest.id},
-			{method: :delete, data:{confirm:"Are you damn sure?"}} %>
- -->		
-
+			<tr>			
+				<td><%= link_to rest.name, rest %></td>
+				<td><%= rest.city %></td>
+				<td><%= rest.zip %></td>
+				<td>$<%= rest.fee %></td>
+				<td><a href="<%= rest.web %>"><%= rest.name %></a></td>
+				<td><%= rest.notes %></td>
+			</tr>	
 			<%end %>
-
-	
+		
+		</table>
 	</div>
 </div>
 
