added logout to nav

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,12 +8,22 @@
  			 <li><a href="/users/new">New Users</a></li>
        <li><a href="/authentications/new">Sign In</a></li>
        <li><a href="/groups/">Groups</a></li>
+
+       <%if current_user != nil%>
+
+        <li><%= button_to "Log out", "/authentications/new/", method: :delete %></li>
+
+        <%else%>
+
        <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
               <input class="span2" type="password" placeholder="Password">
               <a input class="btn btn-default" type="submit" href="/rests">Sign in</a></button>
               <a input class="btn btn-default" type="submit" href="/rests">New User</a></button>
           </form>
+
+       <%end%> 
+
 		</ul>
 </div>
 	
