--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
         <p>
           <%= i.submit%>
         </p>
-        User id: <%= session[:user_id] %>
+        User id: <%= current_user.email %>
 
       <%end%>
           
