got update and delete working

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,7 +9,13 @@ $maincolor: black;
  	margin: 0 auto;
  	position: absolute;
  	top: 150px;
+ 	left: -50px;
+ 	padding: 20px;
  }
+.navtext {
+	color: white;
+}
+
 
  h3 {
  	color: white;
@@ -24,8 +30,9 @@ $maincolor: black;
  }
 
 .jumbotron {
-	width: 300;
-	opacity: .8;
+	position: absolute;
+	margin: 0 auto;
+	margin-left: 40%;
 }
 
 #newuser {
@@ -37,29 +44,30 @@ $maincolor: black;
 	margin: 0 auto;
 	width: 350px;	
 	position: relative;
-	
+	margin-top: 50px;
 }
 
 #restlist {
 	margin: 0 auto;
 	width: 600px;	
 	position: relative;
-	
+	margin-top: 50px;
 }
 
 #restlistbox {
 	margin: 0 auto;
 	width: 600px;
-	background-color: rgba(205, 45, 45, 0.7);
+	background-color: rgba(205, 45, 45, 0.9);
 	color: black;
 	border-radius: 20px;
 	position: absolute;
+	padding: 20px;
 }
 
 #newrestbox {
 	margin: 0 auto;
 	width: 350px;
-	background-color: rgba(205, 45, 45, 0.7);
+	background-color: rgba(205, 45, 45, 0.9);
 	color: black;
 	border-radius: 20px;
 	padding: 20px;
@@ -71,9 +79,15 @@ li {
 }
 
 body {
-	background-image: url(image-path('corks2.jpg'));
+/*	background-image: url(image-path('corks2.jpg'));
 	background-size: cover;
 	background-repeat: no-repeat;
+*/
+background: url(image-path('corks3.png')) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 }
 
 .row div {
