--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -1,1 +1,5 @@
-<p>This is the authentications index page</p>
+<div id="newrest">
+  <div id="newrestbox">
+<h1>This is the authentications index page</h1>
+ </div>
+</div>
