--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,7 +1,9 @@
 <div id="newrest">
-	<div id="newrestbox">
+	<div id="newrestbox" class="jumbotron">
+	<h1>KeyFree</h1>
+		<p class="lead">BYOB without the fee</p></br>
 
-		<h1>Login Here</h1>
+<!-- 		<p class="lead">Login Here</p> -->
 
 			<%= form_for @user, {class: "form-group col-lg-8", url:"/authentications", method:"post"} do |i|%>
 
