--- a/app/views/rests/edit.html.erb
+++ b/app/views/rests/edit.html.erb
@@ -2,7 +2,7 @@
 <div id="newrest">
 	<div id="newrestbox">
 
-		<h1>Create a new Restaurant</h1>
+		<h1>Update a new Restaurant</h1>
 
 			<%= render 'layouts/form' %>
 	</div>
