committing before trying geolocation

--- a/app/views/rests/index.html.erb
+++ b/app/views/rests/index.html.erb
@@ -23,7 +23,7 @@
 				<td>$<%= rest.fee %></td>
 				<td><a href="<%= rest.web %>"><%= rest.name %></a></td>
 				<td><%= rest.notes %></td>
-				<td><%= button_to 'Update', edit_rest_path(rest._id), method: 'get', :confirm => 'Are you sure you want to update?' %></td>
+				<td><%= button_to 'Update', edit_rest_path(rest._id), method: 'get' %></td>
 				<td><%= button_to 'Delete', rest_path(rest._id), method: 'delete', :confirm => 'Are you sure?' %></td>
 
 			</tr>	
