--- a/app/views/rests/show.html.erb
+++ b/app/views/rests/show.html.erb
@@ -44,7 +44,7 @@
 		<strong><%= @rest.name %></strong></br>
     <%= @rest.city %></br>
     <%= @rest.zip %></br>
-    Website: <%= @rest.web %></br>
+    Website: <a href><%=@rest.web %></a></br>
     Fee: $<%= @rest.fee %></br>
     <%= @rest.notes %></br>
 
