--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -19,6 +19,6 @@
 				  <%= i.submit "LOG IN" %>
 				</p>
 				<%end%>
-				User id: <%= session[:user_id] %>
-	</div>
+<!-- 				User id: <%= session[:user_id] %>
+ -->	</div>
 </div>
