--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <div>
-		<ul class="nav navbar-inverse nav-tabs navbar-default">
+		<ul class="nav navbar-inverse nav-tabs navbar-fixed-top">
 
      	 <li><a href="/">Key Free</a></li>
  			 <li><a href="/rests">List</a></li>
