--- a/app/views/rests/show.html.erb
+++ b/app/views/rests/show.html.erb
@@ -8,36 +8,38 @@
 
         var mapOptions = {
           center: myLatLng,
-          zoom: 12,
+          zoom: 15,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
 
         var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
+        mapOptions);
       
+         // To add the marker to the map, use the 'map' property
         var marker = new google.maps.Marker({
         position: myLatLng,
         map: map,
-        draggable: true,
-        animation: google.maps.Animation.DROP
-      });
+        draggable:true,
+        animation: google.maps.Animation.DROP, 
+        // icon: image
+     });
 
-        var secondMarker = new google.maps.Marker({
-        position: new google.maps.LatLng(40.699918,-74.456334),
-        map: map,
-        draggable: true,
-        animation: google.maps.Animation.DROP
-      });
+      //   var secondMarker = new google.maps.Marker({
+      //   position: new google.maps.LatLng(40.699918,-74.456334),
+      //   map: map,
+      //   draggable: true,
+      //   animation: google.maps.Animation.DROP
+      // });
 
         google.maps.event.addListener(map,'click',function(evt){console.log(evt.latLng);});
 
       }
-        google.maps.event.addDomListener(window, 'page:change', initialize
-        );
+        google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
 
-
+<br>
+<br>
 <div id="newrest">
 	 <div id="newrestbox">
 
