--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,20 @@
 <div id="newrest">
-  <div id="newrestbox">
-    <h1>Create a New User</h1>
+  <div id="newrestbox" class="jumbotron">
+    <h1>Create a New User</h1></br>
 
       <%= form_for @user , html: {class: "form-group col-lg-10"} do |i|%>
 
         <p>
           <%= i.label :email, ""%><br/>
-          <%= i.text_field :email, class: "form control", placeholder: "Email" %>
+          <%= i.text_field :email %>
         </p>
         <p>
           <%= i.label :password, ""%><br/>
-          <%= i.password_field :password, class: "form control", placeholder: "Password"%>
+          <%= i.password_field :password%> 
         </p>
         <p>
           <%= i.label :password_confirmation, ""%><br/>
-          <%= i.password_field :password_confirmation, class: "form control", placeholder: "Confirmation"%>
+          <%= i.password_field :password_confirmation %>
         </p>
         <p>
           <%= i.submit%>
