--- a/app/views/rests/show.html.erb
+++ b/app/views/rests/show.html.erb
@@ -2,6 +2,43 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD32oFCWtStoFQ9JzajCXErEoGQNMWlIts&sensor=true">
     </script>
     <script type="text/javascript">
+      
+// Trying to incorporate geocoder below.
+
+// var geocoder;
+// var map;
+// function initialize() {
+//   geocoder = new google.maps.Geocoder();
+//   var latlng = new google.maps.LatLng(-34.397, 150.644);
+//   var mapOptions = {
+//     zoom: 8,
+//     center: latlng,
+//     mapTypeId: google.maps.MapTypeId.ROADMAP
+//   }
+//   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+// }
+
+// function codeAddress() {
+//   var address = document.getElementById('address').value;
+//   geocoder.geocode( { 'address': address}, function(results, status) {
+//     if (status == google.maps.GeocoderStatus.OK) {
+//       map.setCenter(results[0].geometry.location);
+//       var marker = new google.maps.Marker({
+//           map: map,
+//           position: results[0].geometry.location
+//       });
+//     } else {
+//       alert('Geocode was not successful for the following reason: ' + status);
+//     }
+//   });
+// }
+
+// google.maps.event.addDomListener(window, 'load', initialize);
+
+
+
+
+
       function initialize() {
 
         var myLatLng = new google.maps.LatLng(<%= @rest.lat %>, <%= @rest.lon %>);
@@ -24,13 +61,7 @@
         // icon: image
      });
 
-      //   var secondMarker = new google.maps.Marker({
-      //   position: new google.maps.LatLng(40.699918,-74.456334),
-      //   map: map,
-      //   draggable: true,
-      //   animation: google.maps.Animation.DROP
-      // });
-
+  
         google.maps.event.addListener(map,'click',function(evt){console.log(evt.latLng);});
 
       }
@@ -42,19 +73,12 @@
 <br>
 <div id="newrest">
 	 <div id="newrestbox">
-
-		<strong><%= @rest.name %></strong></br>
-    <%= @rest.city %></br>
-    <%= @rest.zip %></br>
-    Website: <a href><%=@rest.web %></a></br>
-    Fee: $<%= @rest.fee %></br>
-    <%= @rest.notes %></br>
-
-  		
-	
+  		<strong><%= @rest.name %></strong></br>
+      <%= @rest.city %></br>
+      <%= @rest.zip %></br>
+      Website: <a href><%=@rest.web %></a></br>
+      Fee: $<%= @rest.fee %></br>
+      <%= @rest.notes %></br>
   <div id="map-canvas"/>
-
-  
-   </div>
-   </div>
+  </div>
 </div>
